--- a/style.css
+++ b/style.css
@@ -1,3 +1,43 @@
+html {
+  scroll-behavior: smooth;
+}
 body {
-    font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0; 
+  padding: 0;
+  min-height: 100vh;
+  font-family: 'Roboto', sans-serif;
+  }
+
+  * {
+    box-sizing: border-box;
+  }
+
+  main {
+    border: 1px solid red;
+  }
+  .container {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+  .nav-list {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    list-style: none;
+  }
+  .nav-link {
+    padding: 0 20px;
+    line-height: 50px;
+    transition:  0.3s;
+  }
+  .section-item a {
+    color: #829985;
+    text-decoration: none;
+    transition: color 0.5s;
+  }
+  .section-item a:hoover {
+    color: #4d2323;
   }
