--- a/style.css
+++ b/style.css
@@ -18,6 +18,18 @@ body {
   main {
     border: 1px solid red;
   }
+  .main-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .section {
+    width: 50%;
+  }
+  @media (max-width: 768px){
+    .section {
+      width: 100%;
+    }
+  }
   .container {
     max-width: 1440px;
     margin: 0 auto;
