--- a/style.css
+++ b/style.css
@@ -5,10 +5,16 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  min-width: 320px;
+  min-height: 100vh;
   margin: 0; 
-  padding: 0;
+  padding: 30px;
   min-height: 100vh;
   font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #4d2323;
   }
 
   * {
@@ -16,14 +22,22 @@ body {
   }
 
   main {
-    border: 1px solid red;
+    
   }
   .main-container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
   }
   .section {
     width: 50%;
+  }
+  .section-title {
+    font-size: 20px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    color: #829985;
   }
   @media (max-width: 768px){
     .section {
@@ -44,12 +58,41 @@ body {
     padding: 0 20px;
     line-height: 50px;
     transition:  0.3s;
+    text-decoration: none;
   }
-  .section-item a {
+  .nav-item a {
     color: #829985;
     text-decoration: none;
     transition: color 0.5s;
   }
-  .section-item a:hoover {
+  .nav-item a:hover {
     color: #4d2323;
+    text-decoration: underline;
+  }
+  .section-item {
+    position: relative;
+    padding-left: 30px;
+    list-style-type: none;
+  }   
+  .section-item::before {
+    content: "";
+    position: absolute;
+    top: 8px;
+    left: 0px;
+    width: 10px;
+    height: 10px; 
+    border: 1px solid #829985;
+    border-radius: 50%;
+  }
+  .section-item a {
+    text-decoration: none;
+  }
+  .section-item a:hover {
+    text-decoration: underline;
+  }
+  .section-footer a {
+    padding-left: 30px;
+  }
+  .footer img {
+    width: 100px;
   }
