--- a/style.css
+++ b/style.css
@@ -96,3 +96,20 @@ body {
   .footer img {
     width: 100px;
   }
+
+
+  input {
+    padding: 0;
+    margin: 0;
+    accent-color: black;
+    width: 15px;
+    height: 15px;
+  }
+  .input-wrapper {
+    padding: 0;
+    margin: 0;    
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: 1px solid black;
+  }
